--- a/src/components/Hero/Category.css
+++ b/src/components/Hero/Category.css
@@ -33,7 +33,10 @@ line-height: 28px;
  transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
-
+  .ecard .text-darks{
+    font-weight: 400 !important;
+    color: rgba(0, 0, 0, 0.877) !important;
+  }
 #suggest{
     color: var(--primary);
     font-weight: 700;
