--- a/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
+++ b/src/components/Lawyer_Dashboard/Lawyer_Dashboard_Pages/Dashboard.css
@@ -2,9 +2,9 @@
 .lawyer_message{
     /* background-color: pink !important; */
     width: 82%;
-    margin-top: -41.89%;
+    margin-top: -40.20%;
     margin-left: 18%;
-    height: 79.16vh;
+    height: 80vh;
    
 }
 .lawyer_message .msg_1{
@@ -12,6 +12,7 @@
     border-radius: 0px, 37px, 37px, 37px;
     position: absolute;
     width: 68.2%;
+    margin-top: 7px;
     margin-left: -13.98%;
     height: 78.40vh;
 }
@@ -43,6 +44,7 @@
     background-color: var(--fourth-primary) !important;
     width: 13.38%;
     position: absolute;
+    margin-top: 7px;
     height: 78.40vh;
     border-radius: 20px 0px 0px 20px;
 }
@@ -59,9 +61,9 @@
 .lawyer_profile{
     /* background-color: pink !important; */
     width: 82%;
-    margin-top: -41.89%;
+    margin-top: -40.20%;
     margin-left: 18%;
-    height: 79.16vh;
+    height: 80vh;
    
 }
 .lawyer_profile  .inpu{
@@ -74,6 +76,7 @@
     border-radius: 0px, 37px, 37px, 37px;
     position: absolute;
     width: 71.16%;
+    margin-top: 7px;
     margin-left: -16.98%;
     height: 78.40vh;
 }
@@ -81,6 +84,7 @@
     background-color: var(--fourth-primary) !important;
     width: 10.38%;
     position: absolute;
+    margin-top: 7px;
     height: 78.40vh;
     border-radius: 20px 0px 0px 20px;
 }
@@ -116,21 +120,20 @@
         width: 82%;
         margin-top: -4.89%;
         margin-left: 18%;  
+        height: 36vh !important;
     }
     .lawyer_message .msg_1{
        border-radius: 20px;
         width: 92.2%;
+        margin-top: 29px;
         margin-left: -13.98%;
-        height: 70.40vh;
+        height: 30.40vh;
     }
     .lawyer_message .msg_1 .text_msg1{
         border-radius: 25px 25px 25px 25px;
+        margin-top: 25px;
     }
     
-    .lawyer_message .msg_1 .text_msg2{
-        height: 170px;
-        border-radius: 25px 25px 25px 25px;
-    }
     .lawyer_message .msg_1 .text_msg1 p{
         font-size: 14px;
         width: 118%;
@@ -153,70 +156,63 @@
     } 
     .lawyer_message .user_pro{
         width: 77.38%;
-        margin-top: -176.69%;
-        height: 78.90vh;
+        margin-top: -135.69%;
+        height: 60.90vh;
         border-radius: 20px 20px 20px 20px;
     }
+    .sidebar{
+        position: relative;
+       z-index: 1;
+       height: 65vh !important;
+   }
   }
 
   @media only screen and (max-width: 360px) {
     .lawyer_message .msg_1{
          height: 76.40vh;
      }
-    .lawyer_message .user_pro{
-        margin-top: -168.69%;
-    }
     .lawyer_message .msg_1 .text_msg2{
         height: 170px;
         border-radius: 25px 25px 25px 25px;
     }
-    .lawyer_message .msg_1 .text_msg1 .pb{
-        line-height: 18px;
-    } 
     .lawyer_message .msg_1 .text_msg2 p{
         line-height: 16px;
     } 
-    .sidebar{
-        position: relative;
-       z-index: 1;
-   }
+    .lawyer_message .user_pro{
+        margin-top: -125.69%;
+    }
+    .lawyer_message .msg_1{
+         height: 39.40vh;
+     }
+     .lawyer_message{
+        height: 46vh !important;
+    }
   }
 
   @media only screen and (max-width: 320px) {
     .lawyer_message .msg_1{
          height: 76.40vh;
      }
-    .lawyer_message .user_pro{
-        margin-top: -168.69%;
-    }
     .lawyer_message .msg_1 .text_msg1{
         height: 270px;
         margin-top: 20px;
     }
-    .lawyer_message .msg_1 .text_msg2{
-        height: 170px;
-        margin-top: 20px;
-    }
-    .lawyer_message .msg_1 .text_msg1 .pb{
-        width: 135%;
-    } 
     .lawyer_message .msg_1 .text_msg2 p{
         line-height: 16px;
         width: 135%;
     } 
-    .sidebar{
-        position: relative;
-       z-index: 1;
-   }
+    .lawyer_message .user_pro{
+        margin-top: -125.69%;
+    }
+    .lawyer_message .msg_1{
+         height: 47.40vh;
+     }
+     .lawyer_message{
+        height: 54vh !important;
+    }
   }
 
   @media only screen and (width: 375px) {
-    .lawyer_message .user_pro{
-        margin-top: -145.69%;
-    }
-    .lawyer_message .msg_1{
-        height: 76.40vh;
-    }
     .lawyer_message .msg_1 .text_msg1{
         height: 270px;
         margin-top: 20px;
@@ -225,23 +221,55 @@
         height: 170px;
         margin-top: 20px;
     }
-    .sidebar{
-        position: relative;
-       z-index: 1;
-   }
+    .lawyer_message .user_pro{
+        margin-top: -106.69%;
+    }
+    .lawyer_message .msg_1{
+         height: 47.40vh;
+     }
+     .lawyer_message{
+        height: 54vh !important;
+    }
+  }
+  @media only screen and (width: 414px) {
+    .lawyer_message .user_pro{
+        margin-top: -130.69%;
+    }
+  }
+  @media only screen and (width: 390px) {
+    .lawyer_message .user_pro{
+        margin-top: -132.69%;
+    }
+    .lawyer_message .msg_1{
+         height: 34.40vh;
+     }
+     .lawyer_message{
+        height: 40vh !important;
+    }
+  }
+  @media only screen and (width: 393px) {
+    .lawyer_message .user_pro{
+        margin-top: -132.69%;
+    }
+    .lawyer_message .msg_1{
+         height: 34.40vh;
+     }
+     .lawyer_message{
+        height: 40vh !important;
+    }
   }
   @media only screen and (width: 820px) {
     
     .lawyer_message .user_pro{
-        margin-top: -39.89%;
+        margin-top: -36.69%;
         width: 25.38%;
-        height: 54.40vh;
+        height: 52.40vh;
         margin-left: -60px;
     }
     .lawyer_message .msg_1{
-        margin-top: -39.89%;
+        margin-top: -36.69%;
         width: 62.42%;
-        height: 54.40vh;
+        height: 52.40vh;
         margin-left: -8.98%;    
      }
      .lawyer_message{
@@ -272,17 +300,19 @@
   @media only screen and (width: 768px) {
     
     .lawyer_message .user_pro{
-        margin-top: -68.89%;
+        margin-top: -40.99%;
         width: 25.38%;
+        height: 59.40vh;
         margin-left: -60px;
     }
     .lawyer_message .msg_1{
-        margin-top: -68.89%;  
+        margin-top: -40.99%;  
         width: 62.42%;
+        height: 59.40vh;
         margin-left: -8.98%;    
      }
      .lawyer_message{
-        height: 27.50vh;
+        height: 30.20vh;
        
     }
     .sidebar{
@@ -294,17 +324,19 @@
   @media only screen and (width: 912px) {
     
     .lawyer_message .user_pro{
-        margin-top: -81.40%;
+        margin-top: -33.69%;  
         width: 25.38%;
+        height: 48.40vh;
         margin-left: -60px;
     }
     .lawyer_message .msg_1{
-        margin-top: -81.40%; 
+        margin-top: -33.69%;  
         width: 62.42%;
-        margin-left: -8.98%; 
+        height: 48.40vh;
+        margin-left: -8.98%;    
      }
      .lawyer_message{
-        height: 24.90vh;
+        height: 26.90vh;
        
     }
     .sidebar{
@@ -316,7 +348,14 @@
   @media only screen and (width: 540px) {
     
     .lawyer_message .user_pro{
-        margin-top: -107.40%;
+        margin-top: -79.40%;
+    }
+    .lawyer_message .msg_1{
+        height: 35.80vh;
+    }
+    .lawyer_message{
+        height: 42.20vh !important;
+       
     }
     .sidebar{
         position: relative;
@@ -327,14 +366,14 @@
   @media only screen and (width: 1024px) {
     
     .lawyer_message .user_pro{
-        margin-top: -8%;
+        margin-top: -17%;
         margin-left: -110px;
-        height: 79.88vh;
+        height: 95.48vh;
         width: 25.38%;
     }
     .lawyer_message .msg_1{
-        margin-top: -8%; 
-        height: 79.88vh;
+        margin-top: -17%;
+        height: 95.48vh;
         width: 66.45%;
         margin-left: -130px;   
      }
@@ -344,12 +383,6 @@
     .lawyer_message .msg_1 .text_msg1{
         width: 92%;
         height: 260px;
-        margin-top: 10px;
-    } 
-    .lawyer_message .msg_1 .text_msg2{
-        line-height: 16px;
-        width: 92%;
-        height: 190px;
         margin-top: 10px;
     } 
     .lawyer_message .msg_1 .text_msg1 p{
@@ -367,18 +400,19 @@
   @media only screen and (width: 1280px) {
     
     .lawyer_message .user_pro{
-        margin-top: -10.69%;
+        margin-top: -9.69%;
         margin-left: -130px;
-        height: 79.88vh;
+        height: 78.88vh;
         width: 25.38%;
     }
     .lawyer_message .msg_1{
-        margin-top: -10.69%; 
+        margin-top: -9.69%;
         width: 66%;
+        height: 78.88vh;
         margin-left: -155px;   
      }
      .lawyer_message{
-        height: 62.20vh;
+        height: 64.30vh;
        
     }
     .sidebar{
@@ -394,13 +428,13 @@
         width: 82%;
         margin-top: 2.89%;
         margin-left: 18%;
-        height: 28.40vh;
+        height: 50.40vh;
     }
     .lawyer_profile .msg_1{
        border-radius: 20px;
        width: 77.38%;
         margin-left: .78%;
-        margin-top: -151.69%;
+        margin-top: -107.69%;
         height: 100.40vh;
     }
     .card-body{
@@ -411,7 +445,7 @@
     }
     .lawyer_profile .user_pro{
         width: 77.38%;
-        margin-top: -176.69%;
+        margin-top: -134.69% !important;
         height: 10.90vh;
         border-radius: 20px 20px 20px 20px;
     }
@@ -483,17 +517,39 @@
 
   @media only screen and (width: 320px) {
     .lawyer_profile{
-        height: 42.40vh;
+        height: 61.40vh;
     }
    
     .lawyer_profile .msg_1{
-         margin-top: -150.69%;
-         height: 112.40vh;
+         margin-top: -108.69%;
+         height: 113.40vh;
      }
      .lawyer_profile .user_pro .umn{  
         width: 25.70% !important;
         height: 62px;
+        
     }
+     .lawyer_profile .change {
+        margin-left: -14px !important;
+        margin-top: -26px;
+        position: absolute !important;
+    } 
+    .lawyer_profile  .inpu{
+        line-height: 26px;
+        width: 75.99% !important;
+    }
+  }
+  @media only screen and (width: 375px) {
+    .lawyer_profile{
+        height: 61.40vh;
+    }
+    .lawyer_profile .user_pro{
+        margin-top: -115.69% !important;
+    }
+    .lawyer_profile .msg_1{
+         margin-top: -93.69%;
+         height: 113.40vh;
+     }
      .lawyer_profile .change {
         margin-left: -14px !important;
         margin-top: -26px;
@@ -523,16 +579,16 @@
 
   @media only screen and (width: 414px) {
     .lawyer_profile{
-        height: 12.40vh;
+        height: 32.40vh;
     }
     .lawyer_profile .user_pro .um{  
         margin-top: 3.69%;
     }
     .lawyer_profile .user_pro{
-        margin-top: -183.69%;
+        margin-top: -140.69% !important;
     }
     .lawyer_profile .msg_1{
-         margin-top: -156.69%;
+         margin-top: -114.69%;
          height: 83.40vh;
      }
      .lawyer_profile .user_pro .umn{  
@@ -548,7 +604,7 @@
 
   @media only screen and (width: 390px) {
     .lawyer_profile{
-        height: 15.40vh;
+        height: 35.40vh;
     }
     .lawyer_profile .user_pro .um{  
         margin-top: 2.69%;
@@ -561,27 +617,27 @@
         position: absolute !important;
     } 
     .lawyer_profile .user_pro{
-        margin-top: -183.69%;
+        margin-top: -143.69% !important;
     }
     .lawyer_profile .msg_1{
-         margin-top: -156.69%;
-         height: 86.40vh;
+         margin-top: -117.69%;
+         height: 89.40vh;
      }
     
   }
   @media only screen and (width: 393px) {
     .lawyer_profile{
-        height: 15.40vh;
+        height: 34.40vh;
     }
     .lawyer_profile .user_pro .um{  
         margin-top: 3.69%;
     }
     .lawyer_profile .user_pro{
-        margin-top: -183.69%;
+        margin-top: -143.69% !important;
     }
     .lawyer_profile .msg_1{
-         margin-top: -156.69%;
-         height: 86.40vh;
+         margin-top: -117.69%;
+         height: 87.40vh;
      }
      .lawyer_profile .user_pro .umn{  
         width: 20.70% !important;
@@ -596,16 +652,16 @@
 
   @media only screen and (width: 412px) {
     .lawyer_profile{
-        height: 11.40vh;
+        height: 29.40vh;
     }
     .lawyer_profile .user_pro .um{  
         margin-top: 3.69%;
     }
     .lawyer_profile .user_pro{
-        margin-top: -187.69%;
+        margin-top: -146.69% !important;
     }
     .lawyer_profile .msg_1{
-         margin-top: -161.69%;
+         margin-top: -119.69%;
          height: 81.40vh;
      }
      .lawyer_profile .user_pro .umn{  
@@ -621,19 +677,19 @@
 
   @media only screen and (width: 820px) { 
     .lawyer_profile .user_pro{
-        margin-top: -38%;
-        height: 50vh;
+        margin-top: -36%;
+        height: 52vh;
         width: 25.38%;
         margin-left: -60px;
     }
     .lawyer_profile .msg_1{
-        margin-top: -38%;
-        height: 50vh;
+        margin-top: -36%;
+        height: 52vh;
         width: 62.42%;
         margin-left: -8.98%;
      }
      .lawyer_profile{
-        height: 25vh;
+        height: 27.90vh;
        
     }
     .card-body{
@@ -659,19 +715,19 @@
 
   @media only screen and (width: 768px) { 
     .lawyer_profile .user_pro{
-        margin-top: -42.99%;
-        height: 58vh;
+        margin-top: -41%;
+        height: 59.70vh;
         width: 25.38%;
         margin-left: -60px;
     }
     .lawyer_profile .msg_1{
-        margin-top: -42.99%;
-        height: 58vh;
+        margin-top: -41%;
+        height: 59.70vh;
         width: 62.42%;
         margin-left: -8.98%;
      }
      .lawyer_profile{
-        height: 27.29vh;
+        height: 29.99vh;
        
     }
     .card-body{
@@ -697,19 +753,19 @@
  
   @media only screen and (width: 912px) { 
     .lawyer_profile .user_pro{
-        margin-top: -36%;
+        margin-top: -33.40%;
         height: 48vh;
         width: 25.38%;
         margin-left: -60px;
     }
     .lawyer_profile .msg_1{
-        margin-top: -36%;
+        margin-top: -33.40%;
         height: 48vh;
         width: 62.42%;
         margin-left: -8.98%;
      }
      .lawyer_profile{
-        height: 25vh;
+        height: 26.90vh;
        
     }
     .card-body{
@@ -734,17 +790,17 @@
 
   @media only screen and (width: 540px) {
     .lawyer_profile{
-        height: 29.40vh;
+        height: 50.40vh;
     }
     .lawyer_profile .user_pro .um{  
         margin-top: .89%;
     }
     .lawyer_profile .user_pro{
-        margin-top: -115.69%;
+        margin-top: -89.69% !important;
     }
     .lawyer_profile .msg_1{
-         margin-top: -98.69%;
-         height: 101.40vh;
+         margin-top: -73.69%;
+         height: 104.40vh;
      }
      .card-body{
         margin-top: -20px;
@@ -769,19 +825,19 @@
   @media only screen and (width: 1024px) {
     
     .lawyer_profile .user_pro{
-        margin-top: -19%;
+        margin-top: -17%;
         margin-left: -110px;
         height: 96vh; 
         width: 24.42%;
     }
     .lawyer_profile  .msg_1{
-        margin-top: -19%;
+        margin-top: -17%;
         height: 96vh;
         width: 66.45%;
         margin-left: -130px;   
      }
      .lawyer_profile {
-        height: 65vh;   
+        height: 68.59vh;   
     }
     .card-body{
         margin-top: -40px;
@@ -809,19 +865,19 @@
   @media only screen and (width: 1280px) {
     
     .lawyer_profile .user_pro{
-        margin-top: -10.69%;
+        margin-top: -9.40%;
         height: 77.80vh;
         margin-left: -130px;
         width: 24.42%;
     }
     .lawyer_profile .msg_1{
-        margin-top: -10.69%; 
+        margin-top: -9.40%; 
         width: 66%;
         height: 77.80vh;
         margin-left: -155px;   
      }
      .lawyer_profile{
-        height: 62.20vh;
+        height: 64.20vh;
        
     }
     .sidebar{
