--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -23,7 +23,7 @@ textarea::placeholder {
 .form-sectionss{
   background-image: url("../images/DIFM_LAW_bgcolor.jpg") !important;
   background-size: cover;
-  height: 890px;
+  height: 960px;
   margin-top: -75px;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.466);
 }
@@ -52,16 +52,35 @@ textarea::placeholder {
   border: 1px solid  var(--third-primary) !important;
 }
 
-input[type="file"]::file-selector-button {
-  outline: 0;
-  color:var(--third-primary);
-  border-width: 0 0 0px !important;
-  background-color: var(--secondary);
+ input[type="file"]::file-selector-button {
+  background: linear-gradient(180deg, #A37707 0%, #D1B06B 100%) !important;
+  border-radius: 4px 0px 0px 4px;
+  border-color: #A37707;
 }
-input[type="file"]:hover::file-selector-button {
-  background-color: var(--secondary) !important;
+.inpu{
+  border-radius: 4px 0px 0px 4px;
+  line-height: 34px;
+  width: 89.99% !important;
 }
 @media only screen and (max-width: 540px) {
+  .form-sectionss{
+    height: 1300px !important;
+  }
+  .btn-law{
+   margin-top: 34% !important;
+  }
+.form-sectionss .inpu{
+  width: 85% !important;
+  line-height: 23px;
+}
+ .form-sectionss  .input-group>.form-select {
+  height: 28px;
+  font-size: 12px;
+}  
+.form-sectionss  input[type="password"]{
+  height: 28px;
+  font-size: 12px;
+} 
 .forms-bg{
   width: 100% !important;
   padding: 0% !important;
