--- a/src/components/Hero/Lawyerscards.css
+++ b/src/components/Hero/Lawyerscards.css
@@ -59,6 +59,13 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.11);
     background-color: rgb(194, 189, 189);
 }
+.lims1{
+    width: 69px;
+    height: 69px;
+    margin-top: -8px;
+    border-radius: 50%;
+    border: 2px solid var(--primary) !important;
+}
 
 .loading-animation{
     overflow: hidden;
