--- a/src/components/job_description_page/Lawyers_profile_card/Lawyers_profile_card.css
+++ b/src/components/job_description_page/Lawyers_profile_card/Lawyers_profile_card.css
@@ -40,3 +40,9 @@
     border-radius: 50%;
     width: 130px;
 }
+.limsf{
+    width: 132px;
+    height: 132px;
+    border-radius: 50%;
+    border: 1px solid var(--primary) !important;
+}
