--- a/src/components/All_Lawyers/AllLawyer.css
+++ b/src/components/All_Lawyers/AllLawyer.css
@@ -88,6 +88,9 @@ input[type="text"]{
     #filters{
         display: none;
     }
+    .view_buttons .lawexp{
+        margin-left: 134px !important;
+      }
     .res1{
         margin-top: -74px !important;
         margin-left: 80px;
@@ -100,9 +103,16 @@ input[type="text"]{
         margin-left: 50px;
     }
     .profi {
-        margin-top: 10% !important;
+        margin-top: 0% !important;
         margin-bottom: 10px;
-        
+        width: 45% !important;
+        font-size: 16px !important;
+        height: 42px !important;
+    }
+    
+    .ser input[type="text"] {
+        height: 36px !important;
+        font-size: 14px !important;
     }
     .res4{
         margin-top: -65px !important;
