--- a/src/components/common/Navbar.css
+++ b/src/components/common/Navbar.css
@@ -1,5 +1,5 @@
 .toggler-btn{
-    background-color: var(--secondary);
+    background-color: rgba(31, 39, 50);
     padding: 10px; 
     margin-top: 11px;
     border-bottom: 3px solid #d1b06b;
