--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -70,7 +70,46 @@ option:focus {
   line-height: 34px;
   width: 89.99% !important;
 }
+@media only screen and (max-width: 540px) {
+  .form-sectionss{
+    height: 1300px !important;
+  }
+  .btn-law{
+   margin-top: 34% !important;
+  }
+.form-sectionss .inpu{
+  width: 85% !important;
+  line-height: 23px;
+  height: auto !important;
+}
+ .form-sectionss  .input-group>.form-select {
+  height: auto;
+  font-size: 12px;
+}  
+.form-sectionss  input[type="password"]{
+  height: auto;
+  font-size: 12px;
+} 
+.forms-bg{
+  width: 92% !important;
+  padding: 0% !important;
+  margin-top: 15px;
+}
+.btn-law{
+  width: 30% !important;
+}
+.btns-formssec{
+  margin-left: 0% !important;
+}
+.btn-regi{
+  width: 40% !important;
+  margin-left: 28%;
+}
+.form-sectionss{
+  height: 990px;
+}
 
+}
 
 
 /* choose forpfile Picture button style  */
@@ -101,130 +140,110 @@ option:focus {
   height: 16px;
   margin-right: 4px;
 }
+/* media query for login page */
 
+/* 320px — 480px: Mobile devices */
 
-@media (max-width: 480px){
-  .btn-law{
-    margin-top: 14% !important;
-    width: 30% !important;
-   }
- .form-sectionss .inpu{
-   width: 85% !important;
-   line-height: 23px;
- }
-  .form-sectionss  .input-group>.form-select {
-   height: 28px;
-   font-size: 12px;
- }  
- .form-sectionss  input[type="password"]{
-   height: 28px;
-   font-size: 12px;
- } 
- .forms-bg{
-   width: 100% !important;
-   padding: 0% !important;
-   margin-top: 16px;
- }
- #form-bk{
-   margin-top: -4px;
- }
-
- .btns-formssec{
-   margin-left: 0% !important;
- }
- .btn-regi{
-  width: 51% !important;
-  margin-left: 22%;
- }
- .form-sectionss{
-   height: 1170px !important;
-   margin-top: 79px !important;
-   height: auto !important;
-   padding: 4%;
- }
-}
-@media only screen and (min-width: 481px) and (max-width: 767px){
-  .btn-law{
-    margin-top: 14% !important;
-    width: 30% !important;
-   }
- .form-sectionss .inpu{
-   width: 85% !important;
-   line-height: 23px;
- }
-  .form-sectionss  .input-group>.form-select {
-   height: 28px;
-   font-size: 12px;
- }  
- .form-sectionss  input[type="password"]{
-   height: 28px;
-   font-size: 12px;
- } 
- .forms-bg{
-   width: 100% !important;
-   padding: 0% !important;
-   margin-top: 16px;
- }
- #form-bk{
-   margin-top: -4px;
- }
- .btns-formssec{
-   margin-left: 0% !important;
- }
- .btn-regi{
-   width: 40% !important;
-   margin-left: 28%;
- }
- .form-sectionss{
-   height: 1170px !important;
-   margin-top: 79px !important;
-   height: auto !important;
-   padding: 4%;
- }
- 
-
-}
-@media only screen and (min-width: 768px) and (max-width: 1023px){
-  .btn-law{
-    margin-top: 14% !important;
-    width: 20% !important;
-   }
- .form-sectionss .inpu{
-   width: 85% !important;
-   line-height: 31px;
- }
- .forms-bg{
-   width: 100% !important;
-   padding: 0% !important;
-   margin-top: 16px;
- }
- #form-bk{
-   margin-top: -4px;
- }
- 
- .btns-formssec{
-   margin-left: 0% !important;
- }
- .btn-regi{
-   width: 40% !important;
-   margin-left: 28%;
- }
- .form-sectionss{
-   height: 1170px !important;
-   margin-top: 79px !important;
-   height: auto !important;
-   padding: 4%;
- }
+@media (max-width: 480px) {
+  .login_page_image{
+    max-width: 75% !important;
+    text-align: center !important;
+  }
+  .small{
+    margin-bottom: 18px !important;
+  }
+  .devider_page{
+    padding: 0px !important;
+  }
+  .asa{
+    margin-top: 120px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-sectionss .inpu{
+    width: 88% !important;
+    line-height: 32px;
+    height: 36px !important;
+  }
  
 }
-@media only screen and (min-width: 1024px) and (max-width: 1200px){
-  .inpu {
-    width: 85.99% !important;
+/* 481px — 768px: iPads, Tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px){
+  .forms-bg{
+    width: 92% !important;
+    padding: 0% !important;
+    margin-top: 15px;
+  }
+  .login_page_image{
+    width: 60% !important;
+    text-align: center !important;
+  }
+  .small{
+    margin-bottom: 19px !important;
+  }
+  .devider_page{
+    padding: 0px !important;
+  }
+  .asa{
+    margin-top: 120px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form-sectionss .inpu{
+    width: 88% !important;
+    line-height: 32px;
+    height: 36px !important;
+  }
 }
+/* 769px — 1024px: Small screens, laptops */
+@media only screen and (min-width: 769px) and (max-width: 1024px){
+  .login_page_image{
+    width: 48% !important;
+    text-align: center !important;
+  }
+  .forms-bg{
+    width: 92% !important;
+    padding: 2% !important;
+    margin-top: 15px;
+  }
+  .small{
+    margin-bottom: 28px !important;
+  }
+  .devider_page{
+    padding: 0px !important;
+  }
 }
+/* 1025px — 1200px: Desktops, large screens */
+@media only screen and (min-width: 1025px) and (max-width: 1200px){
+  .login_page_image{
+    width: 40% !important;
+    text-align: center !important;
+  }
+  .forms-bg{
+    width: 98% !important;
+    padding: 2% !important;
+    margin-top: 15px;
+  }
+  .devider_page{
+    padding: 0px !important;
+  }
+}
+/* 1201px — 1440px: Desktops, large screens laptops*/
 @media only screen and (min-width: 1201px) and (max-width: 1440px){
-  .inpu {
-    width: 88.99% !important;
+  .login_page_image{
+    width: 35% !important;
+  }
+  .forms-bg{
+    width: 98% !important;
+    padding: 2% !important;
+    margin-top: 15px;
+  }
+  .devider_page{
+    padding: 12px !important;
+  }
 }
-}
+
+
 
