--- a/src/components/common/Footer.css
+++ b/src/components/common/Footer.css
@@ -106,9 +106,11 @@ font-size: 93.2% !important;
   width: 82% !important;
 }
   .main {
-    margin-top: 0px !important;
+    margin-top: 79px !important;
 }
-
+.asa{
+  display: none;
+}
 }
 
 /* styling for navbar */
