--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -194,7 +194,6 @@ option:focus {
    margin-left: 28%;
  }
  .form-sectionss{
-   height: 1170px !important;
    margin-top: 79px !important;
    height: auto !important;
    padding: 4%;
@@ -205,10 +204,18 @@ option:focus {
   .inpu {
     width: 85.99% !important;
 }
+.form-sectionss{
+  height: auto !important;
+  padding: 6%;
+}
 }
 @media only screen and (min-width: 1201px) and (max-width: 1440px){
   .inpu {
     width: 88.99% !important;
+}
+.form-sectionss{
+  height: auto !important;
+  padding: 6%;
 }
 }
 
